--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+/**
+* ! changing default styles of the browser
+**/
+
 *{
     margin: 0;
     padding: 0;
@@ -6,4 +10,37 @@
 
 body {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+/**
+* ! navbar styles
+**/
+
+
+.navbar {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;;
+    background-color: #212529;
+    color: white;
+    padding: 25px 60px;
+
+}
+
+.cart {
+    position: relative;
+    background-color: white;
+    color: #212529;
+    font-size: 30px;
+    padding: 5px;
+    border-radius: 4px;
+}
+
+.cartAmount {
+    position: absolute;
+    top: 0;
+    right: 0;
+    font-size: 16px;
+    background-color: red;
+    color: white;
 }
