--- a/style.css
+++ b/style.css
@@ -46,3 +46,17 @@ body {
     padding: 3px;
     border-radius: 3px;
 }
+
+/**
+* ! Shop items styles below
+**/
+
+.shop {
+    display: grid;
+    grid-template-columns: repeat(4, 223px);
+}
+
+.item {
+    border: 2px solid #212529;
+    border-radius: 4px;
+}
