--- a/style.css
+++ b/style.css
@@ -12,6 +12,9 @@ body {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
+i {
+    cursor: pointer;
+}
 /**
 * ! navbar styles
 **/
