--- a/src/style.css
+++ b/src/style.css
@@ -112,3 +112,12 @@ a {
 .bi-file-plus-fill{
     color: green;
 }
+
+/**
+* ! style rules for label and some buttons 
+**/
+
+.text-center {
+    text-align: center;
+    margin-bottom: 20px;
+}
